--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "sass": "^1.77.2",
+    "sweetalert2": "^11.14.0",
     "web-vitals": "^4.0.1"
   },
   "eslintConfig": {
